# ezrav1

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
knowledge_base/: data.json
src/my_project/: __init__.py  main.py  webhook.py
